--- a/examples/50-physics/racing-game/index.html
+++ b/examples/50-physics/racing-game/index.html
@@ -7,21 +7,12 @@
 <body>
   <!-- GAME: http://moygen.rf.gd/world/world.htm -->
 
-  <div id="mui"
-    style="overflow-y:auto;position:absolute;top:0px;left:0px;font-size:20px;">
-
-    <div id="button3"
-      style="border-radius:6px;color:white;background-color:#000000;font-family:monospace;width:200px;padding:2px;margin:4px;text-align:center;cursor:pointer;"
-      onclick="switchCars();">Switch Cars</div>
-    </div>
-  </div>
-
   <script src="ammo.asm.js"></script>
   <script src="three3.js"></script>
   <script src="MTLLoader.js"></script>
   <script src="OBJLoader.js"></script>
   <script src="DecalGeometry.js"></script>
-  <script src="main.js"></script>
+  <script src="main.js" type="module"></script>
 </body>
 
 </html>
