--- a/examples/50-physics/race-game/index.html
+++ b/examples/50-physics/race-game/index.html
@@ -7,7 +7,7 @@
 <body>
   <!-- GAME: http://moygen.rf.gd/world/world.htm -->
 
-  <script src="ammo.asm.js"></script>
+  <script src="/libs/ammo.asm.js"></script>
   <script type="importmap">
     {
         "imports": {
