--- a/examples/50-physics/30-cannon-shoot-wall/index.html
+++ b/examples/50-physics/30-cannon-shoot-wall/index.html
@@ -4,8 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Demolition</title>
+  <style>
+    #magnitude {
+      position: absolute;
+    }
+  </style>
 </head>
 <body>
+
+  <input type="range" id="magnitude" name="magnitude" min="15" max="30">
 
   <script src="/node_modules/three/examples/js/libs/ammo.wasm.js"></script>
   <script type="importmap">
