--- a/examples/50-physics/30-cannon-shoot-wall/index.html
+++ b/examples/50-physics/30-cannon-shoot-wall/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Demolition</title>
+  <title>Cannon shoots</title>
   <style>
     #magnitude {
       position: absolute;
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-  <input type="range" id="magnitude" name="magnitude" min="15" max="30">
+  <input type="range" id="magnitude" name="magnitude" min="15" max="30" step="0.2">
 
   <script src="/node_modules/three/examples/js/libs/ammo.wasm.js"></script>
   <script type="importmap">
