--- a/examples/50-physics/75-vehicle-jerome/index.html
+++ b/examples/50-physics/75-vehicle-jerome/index.html
@@ -12,7 +12,6 @@
   <script src='libs/threex-ammoworld.js'></script>
   <script src='libs/threex-ammocontrols.js'></script>
   <script src='libs/threex-ammovehicle.js'></script>
-  <script src='libs/threex-ammovehiclecontrols.js'></script>
   <script src='libs/threex-ammoterrain.js'></script>
   <script src='libs/threex.poolball.js'></script>
 
@@ -27,6 +26,6 @@
   </style>
   <div id='speedometer'>0.0 km/h</div>
 
-  <script src="main.js"></script>
+  <script src="main.js" type="module"></script>
 
 </body>
