--- a/examples/50-physics/75-vehicle-jerome/index.html
+++ b/examples/50-physics/75-vehicle-jerome/index.html
@@ -9,7 +9,7 @@
   <script src="libs/BinaryLoader.js"></script>
   <script src='libs/stats.min.js'></script>
   <script src='libs/ammo.js'></script>
-  <script src='libs/threex.poolball.js'></script>
+  <!-- <script src='libs/threex.poolball.js'></script> -->
 
   <style>
     #speedometer {
