--- a/examples/50-physics/75-vehicle-jerome/index.html
+++ b/examples/50-physics/75-vehicle-jerome/index.html
@@ -4,11 +4,6 @@
 
 <body style='margin: 0px; overflow: hidden; text-align:center;'>
 
-  <!-- <script src='libs/three.min.js'></script>
-  <script src='libs/OrbitControls.js'></script>
-  <script src="libs/BinaryLoader.js"></script> -->
-  <script src='libs/ammo.js'></script>
-
   <style>
     #speedometer {
       color: #ffffff;
@@ -20,6 +15,7 @@
   </style>
   <div id='speedometer'>0.0 km/h</div>
 
+  <script src="/node_modules/three/examples/js/libs/ammo.wasm.js"></script>
   <script type="importmap">
     {
         "imports": {
