--- a/examples/50-physics/75-vehicle-jerome/index.html
+++ b/examples/50-physics/75-vehicle-jerome/index.html
@@ -15,7 +15,7 @@
   </style>
   <div id='speedometer'>0.0 km/h</div>
 
-  <script src="/node_modules/three/examples/js/libs/ammo.wasm.js"></script>
+  <script src="/libs/ammo.asm.js"></script>
   <script type="importmap">
     {
         "imports": {
