--- a/examples/50-physics/35-ball-shoot-wall/index.html
+++ b/examples/50-physics/35-ball-shoot-wall/index.html
@@ -5,14 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cannon shoots</title>
   <style>
-    #magnitude {
+    #impulse {
       position: absolute;
     }
   </style>
 </head>
 <body>
 
-  <input type="range" id="magnitude" name="magnitude" min="15" max="30" step="0.2">
+  <input type="range" id="impulse" min="15" max="30" step="0.2">
 
   <script src="/node_modules/three/examples/js/libs/ammo.wasm.js"></script>
   <script type="importmap">
