--- a/examples/50-physics/70-vehicle-terrain/index.html
+++ b/examples/50-physics/70-vehicle-terrain/index.html
@@ -2,18 +2,7 @@
 <meta name='viewport' content='width=device-width'>
 <title>Vehicle</title>
 
-<body style='margin: 0px; overflow: hidden; text-align:center;'>
-
-  <style>
-    #speedometer {
-      color: #ffffff;
-      background-color: #990000;
-      position: absolute;
-      bottom: 0px;
-      padding: 5px;
-    }
-  </style>
-  <div id='speedometer'>0.0 km/h</div>
+<body>
 
   <script src="/libs/ammo.asm.js"></script>
   <script type="importmap">
