--- a/examples/50-physics/35-ball-shoot-wall/index.html
+++ b/examples/50-physics/35-ball-shoot-wall/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-  <input type="range" id="impulse" min="15" max="30" step="0.2">
+  <input type="range" id="impulse">
 
   <script src="/node_modules/three/examples/js/libs/ammo.wasm.js"></script>
   <script type="importmap">
