--- a/examples/50-physics/sletanje-mesec/index.html
+++ b/examples/50-physics/sletanje-mesec/index.html
@@ -20,7 +20,7 @@
   <div id="stats">DX: 0, DY: 0, Alt: 550</div>
 
   <script src="simpleGame.js"></script>
-  <script src="main.js"></script>
+  <script src="main.js" type="module"></script>
 </body>
 
 </html>
