--- a/examples/50-physics/sletanje-mesec/index.html
+++ b/examples/50-physics/sletanje-mesec/index.html
@@ -19,7 +19,7 @@
 <body>
   <div id="stats">DX: 0, DY: 0, Alt: 550</div>
 
-  <script src="simpleGame.js"></script>
+  <!-- <script src="simpleGame.js"></script> -->
   <script type="importmap">
     {
         "imports": {
