--- a/examples/50-physics/sletanje-mesec/index.html
+++ b/examples/50-physics/sletanje-mesec/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>lander</title>
+  <title>Lander</title>
   <style>
     #stats {
       position: absolute;
