--- a/examples/15-animation/40-flag-waving/index.html
+++ b/examples/15-animation/40-flag-waving/index.html
@@ -11,8 +11,7 @@
   <script type="importmap">
     {
         "imports": {
-            "three": "/node_modules/three/build/three.module.js",
-            "three-pathfinding": "/node_modules/three-pathfinding/dist/three-pathfinding.module.js"
+            "three": "/node_modules/three/build/three.module.js"
         }
     }
   </script> 
