--- a/examples/80-scenes/locomotive/index.html
+++ b/examples/80-scenes/locomotive/index.html
@@ -2,23 +2,20 @@
 <html>
 
 <head>
-	<title>Locomotive (Discoverthreejs.com - Ch 1.6)</title>
-	<meta name="viewport" content="width=device-width">
-	<meta charset="UTF-8" />
+  <title>Locomotive</title>
+  <meta name="viewport" content="width=device-width">
 </head>
 
 <body>
-
-	<!-- https://codesandbox.io/s/github/looeee/discoverthree.com-examples/tree/master/first-steps/6-shapes-transformations -->
-
-	  <script type="importmap">
+  <script type="importmap">
     {
         "imports": {
             "three": "/node_modules/three/build/three.module.js"
         }
     }
   </script>
-  <script src="game.js" type="module"></script>
+  <script src="./main.js" type="module">
+  </script>
 </body>
 
 </html>
