--- a/examples/90-games/graffiti-3/index.html
+++ b/examples/90-games/graffiti-3/index.html
@@ -4,19 +4,16 @@
 <head>
   <meta charset="UTF-8">
   <title>Graffiti</title>
-  <style>
-    @import url(http://fonts.googleapis.com/css?family=Lobster);
-  </style>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster">
 </head>
 
 <body>
 
-  <span style="font-family: 'Lobster', cursive;">.</span>
+  <span style="font-family: 'Lobster', cursive;"></span>
   
   <canvas id=c width=500 height=100></canvas>
 
-
-    <script type="importmap">
+  <script type="importmap">
     {
         "imports": {
             "three": "/node_modules/three/build/three.module.js"
