--- a/examples/40-procedural/54-graffiti-over-texture/index.html
+++ b/examples/40-procedural/54-graffiti-over-texture/index.html
@@ -1,14 +1,12 @@
-<!doctype html>
-<html lang="en">
+<html>
 
 <head>
-  <meta charset="UTF-8">
-  <title>Graffiti</title>
+  <title>City</title>
 </head>
 
 <body>
 
-    <script type="importmap">
+  <script type="importmap">
     {
         "imports": {
             "three": "/node_modules/three/build/three.module.js"
