--- a/examples/90-games/fps/index.html
+++ b/examples/90-games/fps/index.html
@@ -10,9 +10,9 @@
 <body style="margin: 0;">
   <div id="instructions">
     <div>
-      <h1>Click to begin</h1>
+      <h1>Click to start</h1>
 
-      Shoot: LEFT MOUSE CLICK<br />
+      Shoot: MOUSE CLICK<br />
       Move: W-A-S-D or ARROWS<br />
       Run: SHIFT<br />
       Jump: SPACE<br />
