--- a/examples/20-particles/smoke/index.html
+++ b/examples/20-particles/smoke/index.html
@@ -3,13 +3,12 @@
 <html>
 
 <head>
-  <title>Snow</title>
+  <title>Particles</title>
 </head>
 
 <body>
 
-    <!-- https://threejs.org/examples/webgl_points_sprites.html -->
-      <script type="importmap">
+  <script type="importmap">
     {
         "imports": {
             "three": "/node_modules/three/build/three.module.js"
