--- a/examples/80-scenes/fps-savo/index.html
+++ b/examples/80-scenes/fps-savo/index.html
@@ -3,12 +3,25 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Savo</title>
+  <title>First person shooter</title>
+  <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
 
-    <script type="importmap">
+  <div id="instructions">
+    <div>
+      <h1>Click to start</h1>
+
+      Shoot: MOUSE CLICK<br />
+      Move: W-A-S-D or ARROWS<br />
+      Run: SHIFT<br />
+      Jump: SPACE<br />
+      Look: MOUSE
+    </div>
+  </div>
+
+  <script type="importmap">
     {
         "imports": {
             "three": "/node_modules/three/build/three.module.js"
