--- a/examples/35-mazes/city-shader/index.html
+++ b/examples/35-mazes/city-shader/index.html
@@ -2,6 +2,11 @@
 <html>
 <head>
 	<title>Mazes For Programmers - Chapter 4</title>
+  <style>
+    body {
+      background: black;
+    }
+  </style>
 </head>
 <body>
 
